--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
+  encoding: utf8
   adapter: postgresql
-  encoding: unicode
+  port: 5432
   pool: 5
